re PR target/65648 (Bad code due to IRA fails to recognize the clobber in parallel)

PR ipa/65648
	* ipa-inline-transform.c (inline_call): Skip sanity check to work
	around the ICE

From-SVN: r221861